<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView5"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        android:src="@drawable/ic_6" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView2"
        android:src="@drawable/ic_3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_2" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toLeftOf="@+id/imageView2"
        android:src="@drawable/ic_1" />

	<TextView
	    android:id="@+id/ic_1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/imageView1"
	    android:layout_below="@+id/imageView1"
	    android:layout_marginLeft="25dp"
	    android:text="@string/ic_1"
	    android:textSize="18dp" />

	<TextView
	    android:id="@+id/ic_2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/ic_1"
	    android:layout_alignBottom="@+id/ic_1"
	    android:layout_centerHorizontal="true"
	    android:text="@string/ic_2"
	    android:textSize="18dp" />

	<TextView
	    android:id="@+id/ic_3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/ic_2"
	    android:layout_alignBottom="@+id/ic_2"
	    android:layout_alignRight="@+id/imageView6"
	    android:text="@string/ic_3"
	    android:textSize="18dp" />

	<TextView
	    android:id="@+id/ic_9"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/ic_3"
	    android:layout_below="@+id/imageView9"
	    android:layout_marginLeft="18dp"
	    android:text="@string/ic_9"
	    android:textSize="18dp" />

	<TextView
	    android:id="@+id/ic_8"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/ic_9"
	    android:layout_alignBottom="@+id/ic_9"
	    android:layout_centerHorizontal="true"
	    android:text="@string/ic_8"
	    android:textSize="18dp" />

	<TextView
	    android:id="@+id/ic_7"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/ic_8"
	    android:layout_alignBottom="@+id/ic_8"
	    android:layout_alignLeft="@+id/imageView7"
	    android:text="@string/ic_7"
	    android:textSize="18dp" />

	<TextView
	    android:id="@+id/ic_6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/ic_4"
	    android:layout_alignBottom="@+id/ic_4"
	    android:layout_alignLeft="@+id/imageView9"
	    android:text="@string/ic_6"
	    android:textSize="18dp" />

	<TextView
	    android:id="@+id/ic_5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/ic_6"
	    android:layout_alignBottom="@+id/ic_6"
	    android:layout_centerHorizontal="true"
	    android:text="@string/ic_5"
	    android:textSize="18dp" />

	<ImageView
	    android:id="@+id/imageView7"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/ic_4"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="35dp"
	    android:src="@drawable/ic_7" />

	<ImageView
	    android:id="@+id/imageView8"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/imageView7"
	    android:layout_toLeftOf="@+id/imageView6"
	    android:src="@drawable/ic_8" />

	<ImageView
	    android:id="@+id/imageView4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/imageView1"
	    android:layout_centerVertical="true"
	    android:src="@drawable/naozhong" />

	<ImageView
	    android:id="@+id/imageView9"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/imageView3"
	    android:layout_alignTop="@+id/imageView8"
	    android:src="@drawable/ic_9" />

	<TextView
	    android:id="@+id/ic_4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/imageView4"
	    android:layout_below="@+id/imageView4"
	    android:text="@string/ic_4"
	    android:textSize="18dp" />

</RelativeLayout>
