<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/ic_7"
        android:textColor="#00ff00"
        android:textSize="40sp" />

	<ListView
	    android:id="@+id/listView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textView2"
	    android:layout_alignRight="@+id/textView4"
	    android:layout_below="@+id/textView4" >

    </ListView>

	<TextView
	    android:id="@+id/textView4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/textView3"
	    android:layout_alignBottom="@+id/textView3"
	    android:layout_toRightOf="@+id/textView1"
	    android:text="@string/weight"
	    android:textSize="20sp" />

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/textView2"
	    android:layout_alignBottom="@+id/textView2"
	    android:layout_centerHorizontal="true"
	    android:text="@string/height"
	    android:textSize="20sp" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/shuaxin"
	    android:layout_toLeftOf="@+id/textView1"
	    android:text="次数"
	    android:textSize="20sp" />

	<ImageView
	    android:id="@+id/shuaxin"
	    android:layout_width="50sp"
	    android:layout_height="50sp"
	    android:layout_below="@+id/textView1"
	    android:layout_toLeftOf="@+id/textView4"
	    android:src="@drawable/shuaxin" />

	<ImageView
	    android:id="@+id/zhexiantu"
	    android:layout_width="50sp"
	    android:layout_height="50sp"
	    android:layout_alignBottom="@+id/shuaxin"
	    android:layout_toRightOf="@+id/shuaxin"
	    android:src="@drawable/zhexiantu" />

</RelativeLayout>
